[package]
name = "ardly-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
regex = "1"
serde = { version = "1.0", features = ["serde_derive"] }
rouille = "3.6"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twitch-irc = "5.0"
ureq = { version = "2.8", features = ["json"] }
url = "2.4.1"
webbrowser = "0.8"